  Added : buttons to create desktop, start menu, quick launch, start up shortcuts;
          Linux/MacOS users can configure syscmd.properties file
  Added : autoshutdown options - standby, hibernate, reboot, shutdown, quit when all downloads complete; 
          Linux/MacOS users can configure syscmd.properties file
  Added : command line option to reset application properties (--reset)
  Changed : force download passes max current number of connections (9 concurrent downloads is a limit)
  Changed : remapped selection shortcuts - HOME-first row , END-last row, ctrl+HOME-first column, ctrl+END-last column
  Changed : removed heap memory indicator
  Changed : updated czech translation
  Changed : plugin file names renamed - version info removed
  Changed : new tray icons and splash screen [thanks to Axis!]
  Fixed : NewLinks dialog - pressed key ENTER caused calling insert action twice  
  Fixed : fixed renaming file with many dots in its name
  Fixed : exception when target disk space has not enough space 
  Fixed : shift+DELETE shortcut does not work in History dialog
  Fixed : PAUSED state sometimes runs another download


8th October 2008 - FreeRapid Downloader 0.65 released
  Added : plugins - support for letibit.com [FS#25 - requested by Chris C., implemented by Lukiz] 
  Added : plugins - support for egoshare.com, share-online.biz, easy-share.com [implemented by Lukiz]
  Added : plugins - support for megarotic.com and sexuploader.com [FS#24 - requested by Anonymous, implemented by Lukiz]
  Added : new keystroke to activate searching in Downloads History dialog - Ctrl+F key
  Added : new keystroke for Resume action - SPACE key
  Added : new alternative keystroke for Open file/Show Information dialog - ENTER key
  Added : possibility to import (with clipboard monitoring) or paste links without 'http://' at the beginning         
  Added : Sort by name function - available from Downloads menu - ctrl+S [requested by ATom]