@@ -25,7 +25,7 @@ miscBtnAction.Action.text=&Divers
 miscBtnAction.Action.largeIcon=${iconsPath}miscellanous.gif
 
 
-btnSelectConnectionProxy.Action.text=Configurer le proxy...*
+btnSelectConnectionProxy.Action.text=Configurer le proxy...
 
 btnSelectProxyListAction.Action.text=${null}
 btnSelectProxyListAction.Action.shortDescription=Choix de la liste des proxys
@@ -43,7 +43,7 @@ checkPlaySoundInCaseOfError.text=Jouer un son en cas d'&erreur
 
 checkContinueInterrupted.text=Reprendre les téléchargement interrompus au redémarrage de l'application
 checkPlaySoundWhenComplete.text=Jouer un son quand tous les téléchargements sont terminés
-checkUseProxyList.text=&Utiliser la liste des proxys*
+checkUseProxyList.text=&Utiliser la liste des proxys
 checkForNewVersion.text=Rechercher automatiquement de nouvelles &versions
 checkAllowOnlyOneInstance.text=&Autoriser une seule instance du programme
 checkHideWhenMinimized.text=&Minimiser dans la zone de notification
